--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <app>
-    Loading...
+    Taalidavanu baaliyaanu...
   </app>
 
   <% if (webpackConfig.metadata.isDevServer && webpackConfig.metadata.HMR !== true) { %>
@@ -37,4 +37,12 @@
 </body>
   <script src="https://apis.google.com/js/platform.js?onload=apiLoaded" async defer></script>
   <script src="//www.youtube.com/iframe_api"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-102240598-1', 'auto');
+    ga('send', 'pageview');
+    </script>
 </html>
